--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   collection: ^1.19.0
   intl: ^0.20.2
   http: ^1.2.0
+  
+  # Bento Grid Layout
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
